--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mysql2": "^1.6.4",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-transition-group": "^2.5.0",
+    "reactstrap": "^6.5.0",
     "sequelize": "^4.41.2"
   }
 }
