--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.4.0",
     "mysql2": "^1.6.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
