--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.4.0",
