--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "flow": "^0.2.3",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.4.0",
+    "leaflet": "^1.3.4",
     "mysql2": "^1.6.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-leaflet": "^2.1.2",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.5.0",
     "reactstrap": "^6.5.0",
