--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
   },
   "dependencies": {
     "@turf/midpoint": "^5.1.5",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.4.0",
+    "match": "^1.2.8",
     "mysql2": "^1.6.4",
     "react": "^16.6.3",
+    "react-autosuggest": "^9.4.2",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.1.2",
     "react-transition-group": "^2.5.0",
     "reactstrap": "^6.5.0",
     "sequelize": "^4.41.2"
