--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-transition-group": "^2.5.0",
     "reactstrap": "^6.5.0",
     "sequelize": "^4.41.2",
-    "turf": "^3.0.14"
+    "turf": "^3.0.14",
+    "typeface-roboto": "^0.0.54"
   }
 }
