--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "@material-ui/icons": "^3.0.1",
     "@turf/midpoint": "^5.1.5",
     "@turf/turf": "^5.1.6",
     "autosuggest-highlight": "^3.1.1",
@@ -43,6 +44,7 @@
     "react-transition-group": "^2.5.0",
     "reactstrap": "^6.5.0",
     "sequelize": "^4.41.2",
-    "turf": "^3.0.14"
+    "turf": "^3.0.14",
+    "typeface-roboto": "^0.0.54"
   }
 }
