--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-leaflet": "^2.1.2",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.1.2",
+    "react-slideshow-image": "^1.0.9",
     "react-transition-group": "^2.5.0",
     "reactstrap": "^6.5.0",
     "sequelize": "^4.41.2",
